Fix Overflow Navbar

--- a/web/static/app/css/style.css
+++ b/web/static/app/css/style.css
@@ -11,7 +11,6 @@ body, html {
     margin: 0;
     height: 100vh;
     width: 100vw;
-
     overflow-x: hidden;
 }
 
@@ -47,9 +46,15 @@ body, html {
     padding-right: 1.25rem;
     padding-top: .75rem;
     padding-bottom: .75rem;
+    width: 100%;
+    height: 60px;
+    overflow: hidden;
 }
 
 .side-nav>ul>li>a {
+    width: 100%;
+    height: 60px;
+    overflow: hidden;
     color: #333;
 }
 
@@ -110,6 +115,7 @@ body, html {
     border: 1px solid #e6e6e6;
     border-radius: 5px;
     padding: 10px;
+    z-index: 9999;
 }
 
 .dropdown-menu-c>.dropdown-header {
@@ -120,20 +126,35 @@ body, html {
     display: none;
 }
 
-.breadcrumb {
+.breadcrumb-main {
     background-color: #ebebeb;
     padding: unset;
     padding-left: 15px;
     padding-right: 15px;
+    height: 100%;
+    border-radius: 30px;
+    overflow: hidden;
+    width: calc(100% - 129px);
+}
+
+.breadcrumb {
     line-height: 40px;
-    margin-bottom: unset;
+    padding: unset;
+    margin: unset;
+}
+
+.breadcrumb>li {
+    max-width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis
 }
 
 .body {
     padding: 0rem;
 }
 
-.body > div {
+.body>div {
     height: calc(100vh - 61px);
     margin-right: 15px;
 }
